# Oryx

./: .env.example  .gitignore  Procfile  README-RAILWAY.md  README.md  build.sh  manage.py  pyproject.toml  requirements.txt  test.db
.github/workflows/: ping-site.yml
3d models/: assembly.m3d  bottom.m3d  bottom.stp  main.m3d  main.stp  top.m3d  top.stp
backend/: db.sqlite3  manage.py  requirements.txt
backend/oryx/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: models.py
backend/users/migrations/: 0001_initial.py
esp32/: esp32.ino
esp32/backup/: main_backup.ino
esp32/main/: main.ino
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: base.css  main.css
frontend/src/router/: index.js
frontend/src/stores/: auth.js  devices.js  trips.js
frontend/src/views/: Dashboard.vue  Login.vue  MainPage.vue  Register.vue
oryx_smart_speedometer/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: migrate_to_postgres.py
speedo/: apps.py  models.py  urls.py  views.py
speedo/migrations/: 0001_initial.py  0002_add_pairingcode.py  0002_speedometerdata_acceleration_and_more.py  0003_alter_speedometerdata_device_id.py  0004_remove_speedometerdata_acceleration_and_more.py  0005_route_routepoint.py  0006_remove_routepoint_route_and_more.py  0007_merge_20250504_1945.py
speedo/static/speedo/: style.css
speedo/templates/speedo/: add_device.html  base.html  confirm_pairing.html  dashboard.html  device_details.html  device_list.html  history.html  index.html  login.html  register.html  routes.html  (+2 more)
(+1 files in other folders)
